--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Inter, sans-serif;
+    
 } 
 
 body{
@@ -334,7 +335,7 @@ img {
 /* Header*/
 
 .login-bar-top{
-    width: 100%;
+    width: calc(100% - 240px);
     max-width: 1680px;
     max-height: 73px;
     flex-shrink: 0;
@@ -343,7 +344,7 @@ img {
     position: absolute;
     display: flex;
     justify-content: space-between;
-    
+    left: 0;
 }
 
 .login-bar-top button{
@@ -376,42 +377,50 @@ img {
 }
 
 .svg-titulo{
-    position: absolute;
-    margin: 301px 419px 1498px 913px;
-    z-index: 10;
-    transform: rotate(90deg);
+    display: flex;
+    justify-content: center;
+    margin-top: 275px;
 }
+
 
 #svg-titulo{
     max-width: 288px;
     max-height: 288px;
     flex-shrink: 0;
     position: absolute;
-    margin: 59px 54px 21px 61px;
+    margin-left: 600px;
+    top: 170px;
 }
 
 #blur-svg{
-    position: relative;
-    margin: 90px 120px 120px 70px;
-    transform: rotate(90deg);
+    position: absolute;
+    margin-left: 510px;
+    top: 205px;
+    max-width: 354.15px;
+    max-height: 380.328px;
 }
 
 .main-title h1{
     color: #000;
     text-align: center;
-    font-family: Inter;
     font-size: 64px;
     font-style: normal;
     font-weight: 700;
     line-height: 105.45%; /* 67.488px */
     letter-spacing: 1.28px;
-    margin: 298px auto 0;
+    z-index: 100;
+}
+
+header{
+    display: flex;
+    justify-content: center;
 }
 
 .main-title{
-    position: absolute;
-    margin: 171px 460px auto 461px;
     z-index: 100;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .main-title h2{
@@ -427,7 +436,7 @@ img {
     line-height: 127.95%; /* 40.944px */
     letter-spacing: 0.64px;
     margin: auto;
-
+    z-index: 100;
 }
 
 .main-title p{
@@ -496,7 +505,7 @@ img {
 /* Header*/
 
 .first-box{
-    margin: 1050px auto 113px;
+    margin-top: 171px;
 }
 
 .first-ladeira-box{
@@ -579,8 +588,18 @@ img {
     max-height: 905px;
     border-radius: 10px;
     background: #000;
-    padding: 107px 322px 104px 101px;
     overflow-y: scroll;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.a-logica-p3-direita-texto{
+    display: flex;
+    flex-direction: column;
+    margin: 10%;
+    max-width: 711px;
+    max-height: 696px;
 }
 
 .a-logica-p3-esquerda-1{
@@ -1076,20 +1095,27 @@ img {
 
 @media (max-width: 1024px)
 {  
+
     body{
         background: #EBEBEB;
+        overflow-x: hidden;
     }
 
     .none{
         display: block;
     }
     
+    .login-bar-top{
+        width: 100%;
+    }
+
     .none-phone{
         display: none;
     }
 
     .login-bar-top button{
        font-size: 10px;
+       margin-left: auto;
     }
 
     .login-bar-top button img{
@@ -1101,31 +1127,37 @@ img {
         max-width: 63px;
         max-height: 63px;
         flex-shrink: 0;
-        margin: 9%
+        margin: 9%;
     }
 
-    .svg-titulo{
-        width: 300px;
-        margin: 100px;
-    }
+   .svg-titulo{
+    display: flex;
+    justify-content: flex-end;
+   }
 
     #svg-titulo{
-        margin: -90px  auto auto 120px;
-        width: 250px;
+        margin: auto;
+        max-width: 175px;
+        height: 219px;
+        object-fit: cover;
+        object-position: 0%;
     }
 
     #blur-svg{
-        margin: -50px auto auto 165px;
+        max-width: 234.338px;
+        max-height: 199.427px;
+        right: -20px;
+        margin-top: 10px;
     }
     
     .main-title{
         position: absolute;
-        margin: 5px 30px auto 5px;
         z-index: 100;
     }
 
     .main-title h1{
         font-size: 31px;
+        margin: auto;
     }
 
     .main-title h2{
@@ -1150,28 +1182,39 @@ img {
         margin-top: -10px;
     }
 
+    .arow-down-phone{
+        width: 30px;
+        height: 30px;
+        margin: 57px auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     .first-box {
         width: 100%;
         display: flex;
         flex-direction: column;
-        margin: 672px 14px auto 0;
+        margin-top: 740px;
+        position: relative;
+        justify-content: center;
+        align-items: center;
         padding: 0;
     }
 
     .first-box img{
-        width: 177px;
-        height: 262px;
+        max-width: 177px;
+        max-height: 262px;
     }
 
     .first-ladeira-box{
         display: flex;
         flex-direction: column;
-        margin-left: 14px;
-        margin-left: 14px;
+        margin: auto;
     }
 
     .ladeira-box{
-        width: 365px;
+        max-width: 365px;
         padding: 37px 20px 0 18px;
     }
 
@@ -1200,16 +1243,17 @@ img {
     .second-ladeira-box{
         display: flex;
         flex-direction: column-reverse;
+        margin: -60px auto auto;
     }
 
     #second-ladeira-box{
         padding: 22px 15px;
         height: 559px;
-        margin: -60px auto auto -63px;
     }
 
     .second-box-pic{
-        margin: -310px auto auto -62.5px;
+        margin-top: -310px;
+        margin-right: 113px;
         z-index: 100;
     }
 
